<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/headbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_headbar_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/default_headbar_background" >

        <LinearLayout
            android:id="@+id/backView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/default_back_width"
                android:layout_height="@dimen/default_back_height"
                android:layout_marginLeft="12dp"
                android:src="@drawable/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="测试详情"
            android:textColor="@color/default_headbar_title"
            android:textSize="@dimen/default_headbar_titlesize" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/RelativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp" >

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/person_reserve_exercise" />

                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/icon"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/icon"
                    android:text="应用名称"
                    android:textColor="#000000"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/pubname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="发布人：哈哈哈" />

                <TextView
                    android:id="@+id/starttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/finishtime"
                    android:layout_alignLeft="@+id/nameText"
                    android:layout_marginBottom="10dp"
                    android:text="测试开始时间：2013-2-3" />

                <TextView
                    android:id="@+id/finishtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/icon"
                    android:layout_alignLeft="@+id/nameText"
                    android:text="测试截至时间：2015-12-12" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/detailbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp" >

                <TextView
                    android:id="@+id/versiontext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="版本：3.5.0" />

                <TextView
                    android:id="@+id/line"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_alignBaseline="@+id/versiontext"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@+id/versiontext"
                    android:background="@color/default_float_back" />

                <TextView
                    android:id="@+id/timetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/versiontext"
                    android:layout_toRightOf="@+id/line"
                    android:text="时间：2015-03-02" />

                <TextView
                    android:id="@+id/funcdetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/versiontext"
                    android:layout_marginTop="12dp"
                    android:text="@string/etc_func_describe" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp" >

                <TextView
                    android:id="@+id/requirement_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="需求文档正文："
                    android:textColor="#000000"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/requirement_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/etc_requirement" />

                <TextView
                    android:id="@+id/test_require_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="测试需求："
                    android:textColor="#000000"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/test_require_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/etc_test_requirement" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_headbar_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/contact_commit_down" >

        <TextView
            android:id="@+id/downText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="下载"
            android:textColor="#ffffff"
            android:textSize="25dp" />
    </RelativeLayout>

</RelativeLayout>